put some flesh and makeup on

--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,2 +1,41 @@
-<h1>Pages#events</h1>
-<p>Find me in app/views/pages/events.html.erb</p>
+<div class="events events-header">
+  <div class="container">
+    <div class="content">
+        <h1>events.</h1>
+    </div>
+  </div>
+</div>
+
+<div class="divider"></div>
+
+<div class="events events-support mehndi">
+  <div class="container">
+    <h1>mehndi.</h1>
+	<h2>Friday, August 7th</h2>
+	<p>A fun filled pre-wedding celebration <br>full of vibrant colors, laughter and dancing.</p>
+  </div>
+</div>
+
+<div class="divider"></div>
+
+<div class="events events-support shaadi">
+  <div class="container">
+	<div class="blur"></div>
+    <h1>shaadi.</h1>
+	<h2>Saturday, August 8th</h2>
+	<p>A night owed to two lives <br>becoming one.</p>
+  </div>
+</div>
+
+<div class="divider"></div>
+
+<div class="events events-support valima">
+  <div class="container">
+    <h1>valima.</h1>
+	<h2>Sunday, August 9th</h2>
+	<p>A mid afternoon reception <br>commemorating the marriage.</p>
+  </div>
+</div>
+
+<script src="http://s3.amazonaws.com/codecademy-content/projects/jquery.min.js"></script>
+<script src='events.js'></script>
