--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,62 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+  <div class="container">
+  	<div class="row">
+  		<div class="col-xs-5 col-xs-offset-7">
+  			<h1>The adventure begins</h1>
+  			<p>"Love is a force more formidable than any other. It is invisible - it cannot be seen or measured, yet it is powerful enough to transform you in a moment, and offer you more joy than any material possession could."</p>
+  		</div>
+  	</div>
+  </div>
+</div>
+
+<div class="support">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-4">
+				<h2>EVENTS</h2>
+				<p>A wedding is an event. A marriage constitutes a life time.</p>
+			</div>
+			<div class="col-xs-4">
+				<h2>MEMORIES</h2>
+				<p>Photography is a way of feeling, of touching, of loving. What you have caught on film is captured forever... it remembers little things, long after you have forgotten everything.</p>
+			</div>
+			<div class="col-xs-4">
+				<h2>STORIES</h2>
+				<p>A long time ago in a highschool far, far away...</p>
+			</div>
+		</div>
+		<div class="row navlinks">
+			<div class="col-xs-4">
+				<a href="#events"><span class="glyphicon glyphicon-leaf gly-spin" aria-hidden="true"></span>&nbsp;&nbsp;in progress</a>
+			</div>
+			<div class="col-xs-4">
+				<a href="#memories"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>&nbsp;&nbsp;take a peek</a>
+			</div>
+			<div class="col-xs-4">
+				<a href="#stories">COMING SOON</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="feature leaf">
+  <div class="container">
+    <h3>Eat. Drink. Party. Play.</h3>
+  </div>
+</div>
+
+<div class="support">
+	<div class="container">
+		<h2>RSVP</h2>
+		<p>Let us know you're coming and receive updates as we get close to the big day</p>
+		<div class="navlinks">
+			<a href="#rsvp">RSVP</a>
+		</div>
+	</div>
+</div>
+
+<div class="feature flower">
+    <div class="container">
+        <h3>The future looks bright</h3>
+    </div>
+</div>
