--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,27 @@
-<div class="header">
-  <div class="container">
-      <a href="#/" class="pull-left logo">Tuba Weds Asif</a>
-      <a href="#stories" class="pull-right">Stories</a>
-      <a href="#memories" class="pull-right">Memories</a>
-      <a href="#events" class="pull-right">Events</a>
-      <a href="#rsvp" class="pull-right">RSVP</a>
+<div class='header'>
+  <div class='container'>
+    <div class='row'>
+      
+      <div class='col-xs-4'>
+        <%= link_to 'Tuba Weds Asif', pages_home_path, class: 'pull-left logo' %>
+      </div>
+      
+      <div class='col-xs-2'>
+        <%= link_to 'RSVP', pages_rsvp_path, class: 'pull-right' %>
+      </div>
+      
+      <div class='col-xs-2'>
+        <%= link_to 'Events', pages_events_path, class: 'pull-right' %>
+      </div>
+      
+      <div class='col-xs-2'>
+        <%= link_to 'Memories', pages_memories_path, class: 'pull-right' %>
+      </div>
+      
+      <div class='col-xs-2'>
+        <%= link_to 'Stories', pages_stories_path, class: 'pull-right' %>
+      </div>
+    
+    </div>
   </div>
 </div>
