--- a/app/views/pages/memories.html.erb
+++ b/app/views/pages/memories.html.erb
@@ -1,53 +1,38 @@
 <% provide(:title, 'Memories') %>
-<div class="pictures">
-	
-	<div class="jumbotron">
-		<div class='container'>
-			<h2>memories.</h2>
-		</div>
-	</div>
-	
-	<div class='container'>
-		<%= image_tag("http://i.imgur.com/QCSlS3o.jpg", class: 'mainpic') %>
-		<%= image_tag("http://i.imgur.com/4HPjm9c.jpg") %>
-		<%= image_tag("http://i.imgur.com/X5506vR.jpg") %>
-		<%= image_tag("http://i.imgur.com/k4GQ4Ys.jpg") %>
-		<%= image_tag("http://i.imgur.com/kLcg6H8.jpg") %>
-	</div>
 
-	<div class="block">
-		<%= link_to root_path do %>
-			<%= render "layouts/images", :images => @images %>
-		<% end %>
-	</div>
-
-	
-	<div class="container">
-		<div class="row" ng-repeat="picrow in picrows">
-			<div class="col-xs-8">
-				<div class="pictures-main">
-					<img ng-src="{{picrow.main}}" />
-				</div>
-			</div>
-			<div class="col-xs-4">
-				<div class="row">
-					<div class="col-xs-6 pictures-mini">
-						<img ng-src="{{picrow.img1}}" />
-					</div>
-					<div class="col-xs-6 pictures-mini">
-						<img ng-src="{{picrow.img2}}" />
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-6 pictures-mini">
-						<img ng-src="{{picrow.img3}}" />
-					</div>
-					<div class="col-xs-6 pictures-mini">
-						<img ng-src="{{picrow.img4}}" />
-					</div>
-				</div>
-			</div>
-		</div>
+<div class='memories'>
+  
+  <div class='jumbotron'>
+    <div class='container'>
+      <h2>memories.</h2>
+    </div>
   </div>
-
+  
+  <div class='container'>
+    
+    <% @memories.each do |memory| %>
+    
+      <% if (memory.id % 5 == 1) %>
+        <div class='row'>
+          <div class='col-xs-8'>
+            <%= link_to image_tag(memory.thumbnail, size: "650x300"), memory.url %>
+          </div>
+      
+      <% elsif (memory.id % 5 == 0) %>
+        <div class='col-xs-2'>
+          <%= link_to image_tag(memory.thumbnail, size: "150"), memory.url %>
+        </div>
+        </div>
+      <% else %>
+        <div class='col-xs-2'>
+          <%= link_to image_tag(memory.thumbnail, size: "150"), memory.url %>
+        </div>
+      <% end %>
+      
+    <% end %>
+    
+    </div>
+    
+  </div>
+  
 </div>
